# outer-ring-fastapi-demo

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci-docker.yml  ci-docs.yml  ci-integration.yml  ci-lint-type.yml  ci-tests.yml  ci-unit.yml
docs/source/: api_reference.rst  architecture.rst  conf.py  development.rst  index.md  index.md.bak  index.rst  installation.rst  introduction.rst  usage_examples.rst
scripts/: seed.py
src/: test.txt
src/app/: main.py
src/app/api/: api.py
src/app/api/v1/: spacecraft.py
src/app/core/: config.py
src/app/db/: dependencies.py  session.py
src/app/db/migrations/: env.py  script.py.mako
src/app/db/migrations/versions/: 390aec43effe_initial_migration.py
src/app/models/: spacecraft.py
src/app/repositories/: spacecraft_repository.py
src/app/schemas/: spacecraft.py
src/app/services/: spacecraft_service.py
tests/: conftest.py
tests/integration/: test_main_endpoints.py  test_spacecraft_api.py  test_spacecraft_api_extra.py
tests/unit/: test_main_openapi.py  test_main_readyz_failure.py  test_spacecraft_repository.py  test_spacecraft_service.py  test_spacecraft_service_extra.py
