[project]
name = "outer-ring-fastapi-base"
version = "0.1.0"
description = "A fully containerized, secure, and reproducible FastAPI platform."
authors = [{ name = "Aritz Madariaga", email = "aritzmadariaga@deusto.es" }]
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pymysql",
    "alembic",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "structlog",
    "python-json-logger",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-sqlalchemy",
    "prometheus-fastapi-instrumentator",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    "sphinx",
    "myst-parser",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinxcontrib-mermaid",
    "ruff",
    "black",
    "isort",
    "mypy",
    "factory-boy",
    "pytest-xdist",
    "typer",
    "pre-commit",
    "sqlalchemy2-stubs",
    "pydantic[email]",
    "types-python-dateutil",
]

# Optional extras for documentation build and local doc contributors
docs = [
    "sphinx>=7.3.7",
    "myst-parser>=3.0.1",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinxcontrib-mermaid",
]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "sphinx>=7.3.7",
    "myst-parser>=3.0.1",
    "ruff>=0.4.4",
    "black>=24.4.2",
    "isort>=5.13.2",
    "mypy>=1.10.0",
    "factory-boy>=3.3.0",
    "pytest-xdist>=3.6.1",
    "typer>=0.12.3",
    "pre-commit>=3.7.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
strict = true
ignore_missing_imports = true
